--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       <h1>LEARN TO BE CREATIVE.</h1>
       <p>Progateはオンラインプログラミング学習サービスです。</p>
       <p>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <div class="btn-wrapper">
+        <a href="#" class="btn signup">新規登録はこちら</a>
+        <p>or sign up with</p>
+        <a href="#" class="btn facebook">Facebookで登録</a>
+        <a href="#" class="btn twitter">Twitterで登録</a>
+      </div>
     </div>
   </div>
   <div class="lesson-wrapper">
