--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Progate</title>
   <link rel="stylesheet" href="./assets/style/index.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -20,8 +21,14 @@
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or sign up with</p>
-        <a href="#" class="btn facebook">Facebookで登録</a>
-        <a href="#" class="btn twitter">Twitterで登録</a>
+        <a href="#" class="btn facebook">
+          <span class="fa fa-facebook"></span>
+          Facebookで登録
+        </a>
+        <a href="#" class="btn twitter">
+          <span class="fa fa-twitter"></span>
+          Twitterで登録
+        </a>
       </div>
     </div>
   </div>
