--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
   <header>
+    <div class="container">
+      <div class="header-left">
+        <img src="https://prog-8.com/images/html/advanced/main_logo.png" alt="logo" class="logo">
+      </div>
+    </div>
   </header>
   <div class="top-wrapper">
     <!-- ここにコードを書いていきましょう -->
