--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Progate</title>
   <link rel="stylesheet" href="./assets/style/index.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
 </head>
 
 <body>
@@ -13,6 +13,9 @@
     <div class="container">
       <div class="header-left">
         <img src="https://prog-8.com/images/html/advanced/main_logo.png" alt="logo" class="logo">
+      </div>
+      <div class="header-right">
+        <a href="#" class="login">ログイン</a>
       </div>
     </div>
   </header>
